# VoiceOfIU

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
assets/: AppIcon.icns
scripts/: install_autostart.sh  make_app.sh  make_icon.py  uninstall_autostart.sh
src/voiceofiu/: config.py  main.py
src/voiceofiu/dictation/: dictation.py
src/voiceofiu/gui/: app.py  memory_viewer.py  orb_widget.py  settings_window.py  setup_wizard.py  theme.py
src/voiceofiu/listening/: stt.py  vad.py  wake_word.py
src/voiceofiu/memory/: embeddings.py  search.py
src/voiceofiu/output/: tts.py
src/voiceofiu/router/: codex_client.py  ollama_client.py  planner.py
src/voiceofiu/tools/: consent.py  macos_bridge.py  mcp_manager.py
src/voiceofjarvis/: logging_setup.py
src/voiceofjarvis/gui/: logs_window.py  orb_widget.py  settings_window.py  tray.py
src/voiceofjarvis/listening/: audio.py
src/voiceofjarvis/memory/: graph.py  store.py  summariser.py
src/voiceofjarvis/output/: echo_guard.py
src/voiceofjarvis/router/: claude_client.py  router.py
src/voiceofjarvis/tools/: dispatcher.py  local_files.py  macos_calendar.py  macos_mail.py  macos_notes.py  nutrition.py  redact.py  screen.py  weather.py  web.py
tests/: conftest.py  test_consent.py  test_custom_name.py  test_local_files.py  test_memory.py  test_planner.py  test_redact.py  test_routing.py  test_tts_split.py  test_wake_word.py
