[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceofiu"
version = "0.1.0"
description = "VoiceOfIU — a private, local macOS voice assistant powered by Claude Code CLI, Codex, and Ollama"
requires-python = ">=3.11"

[project.scripts]
voiceofiu = "voiceofjarvis.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter, not enforced hard
    "B008",  # function calls in argument defaults (Qt patterns)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
exclude = ["tests/"]
